fix gap and useless section

--- a/index.css
+++ b/index.css
@@ -46,6 +46,7 @@ main {
     padding: 30px 0;
     background-color: #fff;
     height: 100%;
+    row-gap: 30px;
 }
 
 main .project {
